--- a/book_review.html
+++ b/book_review.html
@@ -1,3 +1,5 @@
-<!-- book_reviews.html -->
- <h1>Book Reviews</h1>
+ <!DOCTYPE html>
+ <html>
+<h1>Book Reviews</h1>
  <p>This is a section for book Reviews.</p>
+ </html>
